# YADRO-test-task-base-stations-SHD

./: .gitignore  CMakeLists.txt  README.md
src/: club.cpp  club.h  main.cpp
test/: test_basic.cpp
